Improve Clojure test conformance to 95.4% pass rate
- condp :>> clause support
- if-some/when-some with destructuring bindings
- vector-of builtin (returns regular vectors)
- find-keyword builtin
- underive builtin
- disj! for transient sets
- compare nil handling
- NaN?/infinite? throw on non-numeric input
- contains?/find support for transient collections
- str/trim-newline, str/split-lines, str/re-quote-replacement builtins
- str/replace with function replacement support
- Multimethod isa?-based dispatch using hierarchy
- :keys [a/b] namespace-qualified destructuring
- :syms [a/b] preserve namespace in key lookup
- Remove invalid engine.SingleTierCompilationThreshold option